# template_cxx

./: CMakeLists.txt  README.md  noted.md
include/: DynLibFuncLoader.h  DynLibLoader.h  appconfig.h.in  appmanager.h  get_os_error.h
src/: DynLibLoader.cpp  appmanager.cxx  build_version_utils.cxx  get_os_error.cpp  main.cxx
